# MCP_Developing_REPO

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  perfdigest_init_prompt.md
.github/workflows/: ci.yml  publish.yml
MCP_Developing_Workshop/: package-lock.json  package.json
perfdigest/: .gitignore  .mcp.json  CLAUDE.md  NOTICE  README.md  pyproject.toml
perfdigest/docs/: clients.md
perfdigest/src/perfdigest/adapters/nsight/: csv_reader.py  mapping.py  pri_reader.py
perfdigest/src/perfdigest/core/: digest.py  metrics.py
perfdigest/src/perfdigest/report_store/: discovery.py
perfdigest/src/perfdigest/server/: app.py  prompts.py  tools.py
perfdigest/tests/: conftest.py
workshop/: package-lock.json  package.json
