[project]
name = "perfdigest"
version = "0.1.0"
description = "Local MCP server that makes NVIDIA Nsight Compute (ncu) profiler output token-efficient for LLM coding agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2",
]

[project.optional-dependencies]
# CUDA-only: NVIDIA Python Report Interface. Imported lazily; CSV-only paths skip it.
cuda = ["ncu-report"]
dev = ["pytest>=8"]

[project.scripts]
perfdigest = "perfdigest.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/perfdigest"]
